<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <Button
        style="@style/AppTheme.ButtonMain"
        android:background="@drawable/animation_button"
        android:text="@string/button_enter"
        android:id="@+id/btn_enter"
        />

</LinearLayout>