<resources>
    <string name="app_name">Pichanga</string>
    <string name="name_image_main">Pichanga imagen</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>

    <!--BUttons-->
    <string name="button_enter">Enter</string>

    <!--labels-->
    <string name="lbl_step_one">Know soccer fields close to you</string>
    <string name="lbl_step_two">Find soccer fields by dates, kind and place</string>
    <string name="lbl_step_three">Book soccer fields and have fun</string>

    <!-- Strings related to login -->
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">Soccer Fields</string>
    <string name="banner_ad_unit_id">ca-app-pub-5145296460604039/6823886706</string>
    <string name="test_device">B1B30FBDDBEF32919AF6C5099897C2FA</string>
    <string name="square_blue_name">square_blue</string>
    <string name="img_bottomsheet">image soccer fiel</string>
    <string name="widget_emptylist">Empty list</string>
</resources>
