<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/app_onboarding"
    tools:context="com.tincio.capstoneproject.presentation.activity.OnboardingActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="130dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/container"
        app:tabIndicatorHeight="0dp"/>
</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    >
    <include layout="@layout/layout_buttons_enter"></include>
</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
